fix: add missing items

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -47,6 +47,10 @@ import cmsSingularPlural from "./assets/cms-singular-plural.png";
 import tenantTags from "./assets/tenant-tags.png";
 import fmFileAliases from "./assets/fm-file-aliases.png";
 
+import pageTemplatesBlankPage from "./assets/page-templates-blank-page.png";
+import pageTemplatesEditor from "./assets/page-templates-tpl-editor.png";
+import lexicalEditor from "./assets/lexical-editor.png";
+
 ## Breaking Changes
 
 ### Removed the Headless CMS AWS Lambda Function ([#2945](https://github.com/webiny/webiny-js/pull/2945))
@@ -131,13 +135,13 @@ File Manager supports [customization of file types](/docs/{version}/file-manager
 
 As a part of the **Removing the Headless CMS AWS Lambda Function** task, there is a new GraphQL Schema plugin which is responsible for the Headless CMS GraphQL schema.
 
-If you were using the `GraphQLSchemaPlugin` to define your custom schema for the Headless CMS, please replace it with the `CmsGraphQLSchemaPlugin` (`import { CmsGraphQLSchemaPlugin } from "@webiny/api-headless-cms";`).
+If you were using the `GraphQLSchemaPlugin` to define your custom schema for the Headless CMS, please replace it with the `CmsGraphQLSchemaPlugin`.
 
-To learn more about the required changes, after the removal of the Headless CMS Lambda Function, please read the [Removing the Headless CMS Lambda Function](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) article.
+To learn more, please check out the [Removing the Headless CMS Lambda Function](/docs/release-notes/5.35.0/removing-the-headless-cms-lambda-function) article.
 
 ### Detailed (Advanced) Admin UI Reference Field ([#2969](https://github.com/webiny/webiny-js/pull/2969))
 
-We added a new reference field renderer, called "Detailed view with modal search".
+We added a new reference field renderer, called **Detailed view with modal search**.
 The Detailed renderer is now a default renderer for all the new reference fields, but users can switch to the old one whenever they want to - or from the old one to the new one.
 
 <Image src={modelFieldAppearance} title={"Model Field Appearance Tab"} />
@@ -153,9 +157,9 @@ The Detailed renderer is now a default renderer for all the new reference fields
 
 We added the ability create a new model with the default fields defined. Default fields are:
 
-- Title (title) - text field
-- Description (description) - long text
-- Image (image) - file field with images only
+- **Title (title)** - text field
+- **Description (description)** - long text
+- **Image (image)** - file field with images only
 
 By the default, the checkbox defining the default fields creation is checked, but users can uncheck it if they do not want to create the default fields.
 
@@ -163,8 +167,7 @@ By the default, the checkbox defining the default fields creation is checked, bu
 
 ### Model Icon ([#3142](https://github.com/webiny/webiny-js/pull/3142))
 
-We added the possibility to add an icon when creating or editing a model. In the Admin UI there is an icon picker when creating or editing a model.
-For the code models, users will need to type in the icon pack identifier and the icon identifier, in form of `packId/iconId`. For example, a newspaper icon is `fas/newspaper`.
+We've introduced the ability to add an icon when creating or editing a content model. Within the Admin app, an icon picker will be shown when creating or editing content models. For models [defined via code](/docs/headless-cms/extending/content-models-via-code), users will need to type in the icon pack identifier and the icon identifier, in form of `packId/iconId`. For example, a newspaper icon is `fas/newspaper`.
 
 We have a few icon packs by default: `@fortawesome/free-brands-svg-icons` (`fab`), `@fortawesome/free-solid-svg-icons` (`fas`) and `@fortawesome/free-regular-svg-icons` (`far`).
 
@@ -197,9 +200,35 @@ The measurements cover all our CMS GraphQL Queries and Mutations, as well as the
 
 ## Page Builder
 
-### ✍️ Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
+### Introducing Page Templates ([#2963](https://github.com/webiny/webiny-js/pull/2963) [#3086](https://github.com/webiny/webiny-js/pull/3086))
 
-### ✍️ Introducing A Brand New Text Editor ([#3147](https://github.com/webiny/webiny-js/pull/2963))
+Prior to this release, upon creating pages with the Page Builder application, users would always start with a blank page. 
+
+<Image src={pageTemplatesBlankPage} title={"Blank Page"} />
+
+For some users, this can be challenging, as it can be hard to get inspiration on how to structure content correctly. In addition to this, websites are often built in a way that pages follow a set of predefined structures. In other words, all product pages look the same, all blog pages look the same, and similar. 
+
+In order to tackle this problem, we are introducing a brand new feature called **Page Templates**!
+
+Via the dedicated **templates editor**, users can now create page templates that can be used to create new pages.
+
+<Image src={pageTemplatesEditor} title={"Templates Editor"} />
+
+In a nutshell, the idea is that a page template behaves similarly to a block. A user picks a template, that is inserted into the page editor. A user can only populate variables that the template exposes, or the user can “unlink” the template, which allows them to rearrange elements, add new elements and remove existing elements.
+
+We're excited about this new feature, and we hope you'll find it useful as well! Start creating your own page templates today and let us know what you think! We'd love to hear your feedback!
+
+### Introducing A Brand New Text Editor ([#3147](https://github.com/webiny/webiny-js/pull/2963))
+
+With this release, we're introducing a brand new text editor that will make it even easier to create content-rich pages, blocks, and templates! 
+
+<Image src={lexicalEditor} title={"Introducing A Brand New Text Editor"} />
+
+The new text editor is based on the [Lexical](https://lexical.dev/) framework, and it's a complete rewrite of the old editor. In a nutshell, it provides better and more familiar editing experience, and it's also much more extensible.
+
+In terms of backwards compatibility, we've made sure that texts created with the old editor continues to work as usual (the old editor will still be used). Only the new texts will be using the new editor.
+
+We hope you'll enjoy using the new editor! This is the first release of the new editor, and we're still working on adding new features and improving the overall experience. We have a lot of exciting things planned for the future, so stay tuned!
 
 ### Introducing Advanced Content Organization for Page Builder
 
@@ -328,7 +357,62 @@ Finally, users can now apply vertical centering of content placed in grid cells.
 
 <Image src={gridVerticalCentering} title={"Vertical Centering Grid Cells Vertically Expanded"} />
 
-### ✍️ Improved Theme Object's `styled.typography` Object ([#3147](https://github.com/webiny/webiny-js/pull/2963))
+### Improved Theme's `styled.typography` Object ([#3147](https://github.com/webiny/webiny-js/pull/2963))
+
+Prior to this release, within the theme object, the `styles.typography` property referenced an object where keys represented the typography variant (heading1, heading2, etc.), and values were objects representing the actual typography styles. 
+
+From now on, the `styles.typography` property references an object where keys represent the typography type (heading, paragraph, etc.), and values are arrays of objects, where each object represents a specific typography variant. Each typography variant is an object that consists of four properties: `id`, `name`, `tag`, and `styles`. For example:
+
+```ts apps/theme/theme.ts
+{
+  // ...
+  styles: {
+    typography: {
+      heading: [
+        {
+          id: "heading1",
+          name: "Heading 1",
+          tag: "h1",
+          styles: {
+            // ...
+          }
+        },
+        {
+          id: "heading2",
+          name: "Heading 2",
+          tag: "h2",
+          styles: {
+            // ...
+          }
+        },
+        // ...
+      ],
+      paragraph: [
+        {
+          id: "paragraph1",
+          name: "Paragraph 1",
+          tag: "p",
+          styles: {
+            // ...
+          }
+        },
+        {
+          id: "paragraph2",
+          name: "Paragraph 2",
+          tag: "p",
+          styles: {
+            // ...
+          }
+        },
+        // ...
+      ],
+      // ...
+    }
+  }
+}
+```
+
+For more information, please refer to our updated [Theming](/docs/{exact:5.35.x}/page-builder/theming/introduction) article. Furthermore, for more information on migrating your existing theme to the new structure, please refer to our [Upgrade From 5.34.x to 5.35.0](/docs/release-notes/5.35.0/upgrade-guide#theme-object) article.
 
 <Alert type={"warning"}>
 
