fix: add breaking changes dedicated items

--- a/src/docs/shared/release-notes/5.35.0/changelog.mdx
+++ b/src/docs/shared/release-notes/5.35.0/changelog.mdx
@@ -127,6 +127,14 @@ With the [Support File Aliases](#support-file-aliases-3096) feature, file ID is 
 
 File Manager supports [customization of file types](/docs/{version}/file-manager/extending/create-a-file-type-plugin) by means of `FileManagerFileTypePlugin` plugin. This class is now exported from the `@webiny/app-file-manager`. If you've implemented custom file type renderers, make sure you update your import statements.
 
+### Theme Object Changes
+
+With this release, we've made a change in the data structure of the theme object's `styled.typography` object. More on this in the [Improved Theme's styled.typography Object](#improved-theme-s-styled-typography-object-3147) section below.
+
+### Default Form Layout Replaced
+
+Because of all of the theme object-related changes, and also [new improvements](/docs/release-notes/5.35.0/changelog#form-builder) that have been introduced to the Form Builder application, note that, during upgrade, your default form layout will be backed up and completely replaced with the latest version of the layout. This means that if you have made any customizations to the default form layout, you will need to manually re-apply them to the new layout.
+
 ---
 
 ## Headless CMS
