fix: add `npx`-related troubleshooting item

--- a/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
+++ b/src/docs/shared/release-notes/5.35.0/upgrade-guide.mdx
@@ -424,3 +424,29 @@ In case of the above, note that the options for the [`@emotion/babel-plugin`](ht
 #### Some of the theme-related upgrades were not applied because you are using an older version of the Page Builder rendering engine.
 
 If you received this warning while upgrading, it means that your project is not using the latest Page Builder rendering engine, introduced with [Webiny 5.34.0](/docs/release-notes/5.34.0/changelog#page-elements-a-brand-new-page-rendering-engine-2898). To learn more about the new rendering engine and how to upgrade, check out the [Page Builder - Page Rendering Engine Migration](/docs/release-notes/5.34.0/page-builder-pe-rendering-engine-migration) tutorial.
+
+#### Running the `webiny upgrade` Command Fails With `ENOENT: no such file or directory, chmod ...` Message
+
+If you're receiving an error similar to the following:
+
+```bash
+3100 error enoent ENOENT: no such file or directory, chmod '/Users/svenalhamad/.npm/_npx/45065/lib/node_modules/run-js-with-npx-from-gist/node_modules/replace-in-path/dist/bin/replace-in-path.js'
+3101 error enoent This is related to npm not being able to find a file.
+```
+
+This could be due to a caching issue. To fix it, try running the following commands:
+
+```bash
+# Clear the yarn cache.
+yarn cache clean
+
+# Clear the npm cache.
+npm cache clean --force
+```
+
+Alternatively, we've seen upgrading [`npx`](https://www.npmjs.com/package/npx) to the latest version also fixes the issue:
+
+```bash
+# Upgrade npx to the latest version.
+npm install -g npx
+```
