--- a/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
+++ b/src/docs/5.28.x/page-builder/extending/customize-button-callback-handler.mdx
@@ -40,7 +40,6 @@ When creating a new plugin, it’s recommended to have all the needed files in a
 
 With that in mind, for this tutorial, you will create the new `pb-button-click-handlers` folder in the `apps/extensions` folder.
 
-
 <Alert type="info">
 
 By default, the `extensions` folder does not exist in the `apps` directory, so you’ll need to create it.
@@ -54,7 +53,7 @@ By default, the `extensions` folder does not exist in the `apps` directory, so y
 
 ```json apps/extensions/pb-button-click-handlers/package.json
 {
-    "name": "@extensions/pb-button-click-handlers"
+  "name": "@extensions/pb-button-click-handlers"
 }
 ```
 
@@ -83,31 +82,35 @@ export const buttonClickHandlers = [
 ```
 
 - import the click handler plugin into the following files:
-  - **Page Builder editor** plugins: `apps/admin/src/plugins/pageBuilder/editorPlugins.ts`
-  - **Page Builder render** plugins: `apps/admin/src/plugins/pageBuilder/renderPlugins.ts`
-  - **Website Page Builder** plugins: `apps/website/src/plugins/pageBuilder.ts`
+- **Page Builder editor** plugins: `apps/admin/src/plugins/pageBuilder/editorPlugins.ts`
+- **Page Builder render** plugins: `apps/admin/src/plugins/pageBuilder/renderPlugins.ts`
+- **Website Page Builder** plugins: `apps/website/src/plugins/pageBuilder.ts
+
+  `
 - link workspaces by running `yarn install` command from the project root. After completion, there will be a [symbolic link](https://en.wikipedia.org/wiki/Symbolic_link) of `pb-button-click-handlers` package in `node_modules`.
 
 ## Register a Button Handler
-Now, go back to our custom plugin file to register a new button handler. 
+
+Now, go back to our custom plugin file to register a new button handler.
 
 This comes pretty easy: you just need to define a new plugin object with `type: pb-page-element-button-click-handler`, see the example here below:
 
 ```ts apps/extensions/pb-button-click-handlers/editor.ts
 export const buttonClickHandlers = [
-    // Register a simple click handler that doesn't depend on any variables.
-    {
-        type: "pb-page-element-button-click-handler",
-        name: "simple-handler",
-        title: "A Simple Handler",
-        // Once the button is clicked, we display a simple alert message.
-        handler: () => {
-            alert("I was clicked!");
-        }
+  // Register a simple click handler that doesn't depend on any variables.
+  {
+    type: "pb-page-element-button-click-handler",
+    name: "simple-handler",
+    title: "A Simple Handler",
+    // Once the button is clicked, we display a simple alert message.
+    handler: () => {
+      alert("I was clicked!");
     }
-]
+  }
+];
 ```
-As you can see, the configuration object has the following properties: 
+
+As you can see, the configuration object has the following properties:
 
 - `type`: plugin type (`pb-page-element-button-click-handler`);
 - `name`: the plugin name, this must be unique;
@@ -117,31 +120,32 @@ As you can see, the configuration object has the following properties:
 ![Button handler inside page builder](./assets/customize-button-callback-handler/01-button-handler-simple.png)
 
 ### Custom Button Handler With Variables
-You might need to allow your admin user to set one or more custom values and pass them to the handler. 
 
-In this case, you just need to add a couple more properties to our handler configuration object: 
+You might need to allow your admin user to set one or more custom values and pass them to the handler.
+
+In this case, you just need to add a couple more properties to our handler configuration object:
 
 ```ts apps/extensions/pb-button-click-handlers/editor.ts
 import { PbButtonElementClickHandlerPlugin } from "@webiny/app-page-builder/types";
 
 export const buttonClickHandlers = [
-    // Register a click handler that depends on two variables (color and size).
-    {
-      type: "pb-page-element-button-click-handler",
-      name: "handler-with-variables",
-      title: "Handler With Variables",
-      // Here are the variables that users will be able to set via the
-      // button's "Action" settings (in the Page Builder editor).
-      variables: [
-        { name: "color", label: "My Color", defaultValue: "red" },
-        { name: "size", label: "My Size", defaultValue: "XXL" }
-      ],
-      // Once the button is clicked, we simply log the received variables.
-      handler: ({ variables }) => {
-        console.log(variables); // Logs { color, size } object.
-      }
-    } as PbButtonElementClickHandlerPlugin<{ color: string; type: string }>
-]
+  // Register a click handler that depends on two variables (color and size).
+  {
+    type: "pb-page-element-button-click-handler",
+    name: "handler-with-variables",
+    title: "Handler With Variables",
+    // Here are the variables that users will be able to set via the
+    // button's "Action" settings (in the Page Builder editor).
+    variables: [
+      { name: "color", label: "My Color", defaultValue: "red" },
+      { name: "size", label: "My Size", defaultValue: "XXL" }
+    ],
+    // Once the button is clicked, we simply log the received variables.
+    handler: ({ variables }) => {
+      console.log(variables); // Logs { color, size } object.
+    }
+  } as PbButtonElementClickHandlerPlugin<{ color: string; type: string }>
+];
 ```
 
 You are adding the following property:
@@ -151,7 +155,6 @@ You are adding the following property:
 Now, your admin users can define custom values to predefined variables via the button's "Action" settings within the Page Builder.
 
 ![Button handler with custom variables inside page builder](./assets//customize-button-callback-handler/02-button-handler-variables.png)
-
 
 ## Conclusion
 
