Update custom-field-type.mdx to use new api/graphql path

--- a/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
+++ b/src/docs/5.35.x/headless-cms/extending/custom-field-type.mdx
@@ -187,10 +187,10 @@ Cool, so far, we are done with the UI part of the custom field. In the next step
 
 ### Field To GraphQL Plugin
 
-1. Create `fields/secretText` directory in `apps/api/headlessCMS/src`.
+1. Create `fields/secretText` directory in `apps/api/graphql/src`.
 2. Create a file [`secretTextFieldPlugin.ts`](https://github.com/webiny/webiny-examples/blob/master/headless-cms/custom-field-plugin/api/secretTextFieldPlugin.ts) in newly created directory.
 
-```ts apps/api/headlessCMS/src/fields/secretText/secretTextFieldPlugin.ts
+```ts apps/api/graphql/src/fields/secretText/secretTextFieldPlugin.ts
 import { CmsModelField, CmsModelFieldToGraphQLPlugin } from "@webiny/api-headless-cms/types";
 
 interface CreateListFiltersParams {
