--- a/src/docs/5.29.x/infrastructure/additional-resources/connect-custom-domain.mdx
+++ b/src/docs/5.29.x/infrastructure/additional-resources/connect-custom-domain.mdx
@@ -46,9 +46,16 @@ Read more about requirements for using alternate domain names in the official [A
 import { createWebsiteApp } from "@webiny/serverless-cms-aws";
 
 export default createWebsiteApp({
-  domains() {
+  pulumiResourceNamePrefix: (app: PulumiApp) => { 
+    const stage = app.params.run["env"] || "dev";
+    return `$wby-${stage}-`;
+  },
+  domains: (app: PulumiApp) => {
+    const stage = app.params.run["env"] || "dev";
+    const subdomain = `${siteName}-website`;
+    
     return {
-      domains: ["my.domain.com"],
+      domains: [`${subdomain}.domain.com`],
       sslSupportMethod: "sni-only",
       acmCertificateArn:
         "arn:aws:acm:us-east-1:111111111111:certificate/5931d8b4-a39b-4a3a-a4e7-f5bbdd78d599"
